Feat: port listening from config file

--- a/config.yaml
+++ b/config.yaml
@@ -3,12 +3,11 @@ events:
   - start
   - stop
 server:
-  include: mime.types
   default_type: application/pctet-stream
   sendfile: on
   keepalive_timeout: 65
   listen:          8080
   server_name:     localhost
   location: 
-  root:          html
-  index:         index.html index.htm
+    root:          html
+    index:         ["index.html", "index.htm"]
